<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearnWould</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sePulsa"></string>
    <string name="menuconfiguracionEn">Configuration</string>
    <string name="menufuturoEn">Uses Would in Future</string>
    <string name="menuinfoEn">Information</string>
    <string name="menuusesEn">Uses </string>
    <string name="menuwouldEn">What is  Would</string>
    <string name="menuconjugationEn">Conjugation </string>
    <string name="title_activity_about_learn_would">AboutLearnWould</string>
    <string name="title_activity_would">Would</string>
    <string name="title_activity_would1">Would1</string>
    <string name="readbtn">Read</string>
    <string name="would1">used to indicate what someone said or thought about what was going to happen or be done </string>
    <string name="would2">used to talk about a possible situation that has not happened or that you are imagining</string>
    <string name="would3">\
        used with have to talk about something that did not happen or was not done</string>
    <string name="would4">Congratulations!!! </string>
    <string name="would5">\
        you already know the concept Would
        
        The Next team is uses of Auxiliary Would</string>
    <string name="would6">Do you dare?</string>
    <string name="btnOk">Finish</string>
    <string name="speak">speak</string>
    <string name="btnNext">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_uses">Uses</string>
    <string name="use1">\
        English verbs conjugated with the auxiliary would are used in a variety of ways. For instance, the auxiliary would is often used in polite requests and suggestions. In the following examples, the verbs conjugated with would are underlined</string>
    <string name="use2">\
        e.g. Would you please tell me the time?
      Perhaps it would be a good idea to call the office.</string>
    <string name="use3">\
        The auxiliary would can also express a future in the past, and is used in reporting statements and questions which pertained to the future at the time they were made.</string>
    <string name="use4">\
        e.g. She asked if we would help her the next day.
      They said they would arrange to meet us the following week.</string>
    <string name="use5">\
        The auxiliary would can also be used in wishes pertaining to the future, and in the main clauses of sentences containing false or improbable conditions</string>
    <string name="use6">\
        e.g. I wish they would help us.

      It would have saved time if I had known what to do.</string>
    <string name="use7">you already know the uses Wouldz</string>
    <string name="use8">Now it\'s time to test your skill</string>
    <string name="correct">Correct\!!</string>
    <string name="incorrect">Incorrect\!!</string>
    <string name="useconcorrect">you already know the uses Would</string>
    <string name="test">Now it\'s time to test your skill</string>
    <string name="title_activity_uses1ejer">Uses1ejer</string>
    <string name="check">Check</string>
    <string name="title_activity_uses2ejer">Uses2ejer</string>
    <string name="title_activity_uses3ejer">Uses3ejer</string>
    <string name="title_activity_uses4ejer">Uses4ejer</string>
    <string name="title_activity_uses5ejer">Uses5ejer</string>
    <string name="title_activity_uses6ejer">Uses6ejer</string>

</resources>
