<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Would1" >

    <Button
        android:id="@+id/calificar"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="32dp"
        android:background="@color/inicioletramenu"
        android:text="@string/readbtn"
        android:textColor="@color/blanco" />

    <ImageView
        android:id="@+id/mascotawould1"
        android:layout_width="@dimen/mascotaancho"
        android:layout_height="@dimen/mascotaalto"
        android:layout_above="@+id/calificar"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mascota"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textowouldejer"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imaWo1"
            android:layout_width="@dimen/progresoancho"
            android:layout_height="@dimen/progresoancho"
            android:layout_marginLeft="17dp"
            android:src="@drawable/progreso1" />

        <ImageView
            android:id="@+id/imaWo2"
            android:layout_width="@dimen/progresoancho"
            android:layout_height="@dimen/progresoancho"
            android:layout_marginLeft="17dp"
            android:src="@drawable/progreso1" />

        <ImageView
            android:id="@+id/imaWo3"
            android:layout_width="@dimen/progresoancho"
            android:layout_height="@dimen/progresoancho"
            android:layout_marginLeft="17dp"
            android:src="@drawable/progreso1" />
    </LinearLayout>

    <Button
        android:id="@+id/speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:text="@string/speak" />

    <Button
        android:id="@+id/nobtbwould"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/mascotawould1"
        android:layout_alignLeft="@+id/calificar"
        android:layout_marginBottom="14dp"
        android:background="@color/menuuses"
        android:text="@string/no"
        android:textColor="@color/blanco"
        android:visibility="invisible" />

    <Button
        android:id="@+id/yesbtbwould"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/nobtbwould"
        android:layout_alignTop="@+id/mascotawould1"
        android:background="@color/inicioletramenu"
        android:text="@string/yes"
        android:textColor="@color/blanco"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textowouldejer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mascotawould1"
        android:layout_alignLeft="@+id/yesbtbwould"
        android:layout_marginBottom="62dp"
        android:background="@color/blanco"
        android:gravity="center"
        android:text="@string/would1"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/tranparente" />

</RelativeLayout>